# Algoritmos-y-Estructuras-de-Datos-1

./: README.md
Entregas/entrega1/: CMakeLists.txt  division.cpp  estaOrdenado.cpp  fibonacci.cpp  rotar.cpp  swap.cpp
Entregas/entrega2/: CMakeLists.txt  Existe_pico.cpp  bug_mcd.cpp  main.cpp  min_subsecuencia.cpp  ordenar.cpp
Entregas/entrega3/: CMakeLists.txt  esTriangular.cpp  rotar.cpp  subsecuencia.cpp  trasponer.cpp
Entregas/entrega4/: CMakeLists.txt  bpp.cpp  menorMasGrande.cpp  puntoFijo.cpp
Labo/Resueltos/Clase1/: 1-2.cpp  1-3.cpp  1-4.cpp  1-5.cpp  1-6.cpp  1-7.cpp  1-8.cpp  CMakeLists.txt
Labo/Resueltos/labo01/: 1-1.cpp  1-2.cpp  1-3.cpp  1-4.cpp  1-5.cpp  1-6.cpp  1-7.cpp  1-8.cpp
Labo/Resueltos/labo02/: 2-2.cpp  2-3.cpp  2-4.cpp  2-5.cpp  2-6.cpp  2-7.cpp  2-8.cpp  CMakeLists.txt
Labo/Resueltos/labo03/: 2-5.cpp  3-1.cpp  3-2.cpp  3-4.cpp  3-6.cpp  3-8.cpp  3-9.cpp  CMakeLists.txt
Labo/Resueltos/labo03/archivos/: readFile(ej8).txt
Labo/Resueltos/labo03/src/: main.cpp  vectores.cpp
Labo/Resueltos/labo03/template-alumnos/archivos/: saveVector(9).txt
Labo/Resueltos/labo03/template-alumnos/src/: main.cpp  vectores.cpp  vectores.h
Labo/Resueltos/labo04/: cases.cpp
Labo/Resueltos/labo04/template-alumnos/: ejercicios.cpp  ejercicios.h
Labo/Resueltos/labo05/: ejercicios.cpp
Labo/Resueltos/labo05/template-alumnos/: CMakeLists.txt  main.cpp
Labo/Resueltos/labo06/ej3/: baldosasDelPiso.cpp  contandoDragones.h  electores.cpp  electores.h  electoresAux.cpp
Labo/Resueltos/labo06/lib/: googletest-master.rar
Labo/Resueltos/labo06/template-alumnos/: CMakeLists.txt
Labo/Resueltos/labo07/: cases.cpp  ejercicios.cpp  ejercicios.h  main.cpp
Labo/Resueltos/labo07/lib/: googletest-master.rar
Labo/Resueltos/labo07/template-alumnos/: CMakeLists.txt  (+1 more)
Labo/Resueltos/labo08/: CMakeLists.txt
Labo/Resueltos/labo08/lib/: googletest-master.rar
Labo/Resueltos/labo08/template_alumnos/src/: ejercicios.cpp
Labo/Resueltos/labo09/: CMakeLists.txt  README.md  ejercicios.cpp  ejercicios.h  main.cpp
Labo/Resueltos/labo10/: ejercicios.cpp  ejercicios.h
Practicas/Resuelto/: practica9.md
(+24 files in other folders)
