cmake_minimum_required(VERSION 3.23)
project(labo01)

set(CMAKE_CXX_STANDARD 14)

add_executable(exe1 1-1.cpp)
add_executable(exe2 1-2.cpp)
add_executable(exe3 1-3.cpp)
add_executable(exe4 1-4.cpp)
add_executable(exe5 1-5.cpp)
add_executable(exe6 1-6.cpp)
add_executable(exe7 1-7.cpp)
add_executable(exe8 1-8.cpp)



