cmake_minimum_required(VERSION 3.23)
project(labo03)

set(CMAKE_CXX_STANDARD 14)

add_executable(exe01 2-1.cpp)
add_executable(exe02 2-2.cpp)
add_executable(exe03 2-3.cpp)
add_executable(exe04 2-4.cpp)
add_executable(exe05 2-5.cpp)
add_executable(exe06 2-6.cpp)
add_executable(exe07 2-7.cpp)
add_executable(exe08 2-8.cpp)
add_executable(exe09 2-9.cpp)