cmake_minimum_required(VERSION 3.23)
project(labo03)

set(CMAKE_CXX_STANDARD 14)

add_executable(exe01 3-1.cpp)
add_executable(exe02 3-2.cpp)
add_executable(exe03 3-3.cpp)
add_executable(exe04 3-4.cpp)
add_executable(exe05 3-5.cpp)
add_executable(exe06 3-6.cpp)
add_executable(exe07 3-7.cpp)
add_executable(exe08 3-8.cpp)
add_executable(exe09 3-9.cpp)